--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
 			<version>1.4</version>
 		</dependency>
 
-		
+
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -171,6 +171,19 @@
 			<artifactId>tiles-core</artifactId>
 			<version>3.0.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+	
 	</dependencies>
 	<build>
 		<plugins>
